- fixed linked events moving wrong event  - fixed moving a boundary boxed event causing it to resize when it actually hit the boundary dates  - same for resizing  - hitting ESC when doing a resize/drag will now cancel that resize/drag and move it back to where the drag/resize started - memory optimizations - speed improvements - virtual vertical area with no canvas size limitation - customizable horizontal scrollbars - header date clicking + event firing - scrollbar update fixes - tons more